--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -58,4 +58,5 @@ jobs:
           git config --global user.email "actions@github.com"
           git add data/
           git commit -m "Auto-update data [skip ci]"
+          git pull --rebase origin main
           git push
